--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body
 {
     background-image:url("https://sm.ign.com/t/ign_pl/screenshot/default/9_y58a.1200.jpg");
-    background-repeat:repeat;
+    background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
