--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body
 {
-    background-image:url("https://sm.ign.com/t/ign_pl/screenshot/default/9_y58a.1200.jpg");
-    background-repeat: no-repeat;
+    background-image:url("https://i.imgur.com/wp0fyey.jpg");
+    background-repeat:no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
