--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body
 {
-    background-image:url("https://i.imgur.com/wp0fyey.jpg");
+    background-image:url("https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3c3dXMwdmRrYjhyb2p1N2x3MG91NTBwdHd1dmo5Zmh0dGp5OGw5aSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/LvtxIRg1Ly96E/giphy.gif");
     background-repeat:no-repeat;
     background-size: cover;
     background-attachment: fixed;
